# nsec2025-slot-machine

./: .gitattributes  .gitignore  Cargo.toml  LICENSE-APACHE  README.md  README_FIRMWARE.md  build.rs  oddscalc.py  tauri.conf.json
client/: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  vite.config.js
client/src/: app.css  app.html
client/src/lib/: inputHandler.ts  modalStore.ts  utils.ts
client/src/routes/: +layout.svelte  +page.svelte  +page.ts  Modal.svelte  levelData.svelte.ts  sharedState.svelte.ts
client/src/routes/debug/: +page.svelte
client/src/routes/slot/: +page.svelte  helper.ts  slotReel.ts
prod_build/: .gitignore  README.md  build.yaml  inventory.yaml
schemas/: models.proto
simulator/: Cargo.toml  README.md
simulator/src/: main.rs
slot-machine-crypto/: Cargo.toml  README.md
slot-machine-crypto/src/: common.rs  decrypt.rs  encrypt.rs  lib.rs
slot-machine-procmacro/: Cargo.toml  README.md
slot-machine-procmacro/src/: consts.rs  impls.rs  lib.rs
solve/: Cargo.toml  README.md
solve/crypto/: flag1.md  flag3.py  flag3_debug_buffer.txt
solve/crypto/flag2/: Cargo.toml
solve/crypto/flag2/src/: main.rs
solve/crypto/flag4/: Cargo.toml
solve/crypto/flag4/src/: main.rs
solve/misc/: flag1.md  flag2.md  flag3.md
solve/reverse/: flag1.md  flag2.md  slot-machine.gdb
src/: cli.rs  clock.rs  gpio.rs  lib.rs  main.rs  models.rs  slot.rs  timer.rs
src/rngs/: level1.rs  level2.rs  mod.rs
src/rngs/flags/: FLAG1-DEBUG.txt  FLAG1.txt  FLAG2-DEBUG.txt  FLAG2.txt  FLAG3-DEBUG.txt  FLAG3.txt  FLAG4-DEBUG.txt  FLAG4.txt
src/rngs/level3/: mod.rs  mt19937.rs
src/rngs/level4/: mod.rs  simple_lfsr.rs
wonderlight-website/: Cargo.toml  README.md
wonderlight-website/src/: main.rs
wonderlight-website/src/client/: index.html  model_not_found.html  specs.html
