[workspace]

[package]
name = "simulator"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Simulator for the Wonderlight Slot Machine"
authors = ["zer0x64"]

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
rand = "0.9.1"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
