[package]
name = "slot-machine-procmacro"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Procedural macros for the Wonderlight Slot Machine"
authors = ["zer0x64"]

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0", features = ["full"]}
quote = "1.0"
proc-macro2 = "1.0"
slot-machine-crypto = { path = "../slot-machine-crypto", features = ["encrypt"] }
rand = "0.9.0"
