[workspace]

[package]
name = "wonderlight-website"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.3"
clap = { version = "4.5.35", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
